--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -18,12 +18,15 @@ section {
         width: 20%;
         padding: 0;
         margin: 0;
+        border-radius: 25px;
         >img {
             z-index: 0;        
             background-color: #FF6060;
             padding: 0;
             margin: 0;
             height: 100%;
+            border-radius: 25px;
+
             &::after {
                 position: absolute;
                 top: 0;
@@ -32,6 +35,7 @@ section {
                 width: 100%;
                 content: "";
                 z-index: 1;
+                border-radius: 25px;
                 background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
             }
 
