rectifié 2 erreurs: - context: probleme d'import rectifié dans le composant <Card/> - sass: 1°utilise maintenant des @import pour le fichier main.scss, 2°rectifie le "as footer" toujours dans main.scss, 3°et met en commentaire le code qui générait une erreur dnas index.scss

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -1,6 +1,4 @@
-@use "main.scss";
-@use "utils/variables";
-
+@import "main.scss";
 
 
 /***********************************/
@@ -37,7 +35,7 @@ body{
   }
 }
 
-
+/*
 @media all and (max-width:variables.$mobile){
   body{
     >header{
@@ -105,3 +103,4 @@ body{
     }
   }
 }
+*/
