--- a/src/assets/sass/layouts/headers.scss
+++ b/src/assets/sass/layouts/headers.scss
@@ -17,8 +17,8 @@ header {
     align-items: center;
     justify-content: space-between;
     width: 15%;
-    // color: $red1;
-    color: #FF6060;
+    color: $red1;
+    // color: #FF6060;
     font-weight: 500;
   }
 
