--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -4,42 +4,49 @@ section {
     background-color: #F7F7F7;
     border-radius: 25px;
     margin: 20px 80px;
-    padding: 40px;
+    padding: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    flex-flow: row wrap;
+
     >div {
+
         z-index: 1;
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        height: 250px;
-        width: 20%;
+        width: calc(33.3% - 4%);
+        aspect-ratio : 1 / 1;
         padding: 0;
-        margin: 0;
-        border-radius: 25px;
-        >img {
-            z-index: 0;        
-            background-color: #FF6060;
-            padding: 0;
-            margin: 0;
-            height: 100%;
-            border-radius: 25px;
+        border-radius: 10px;
+        margin: 2%;
 
-            &::after {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 100%;
+
+        >.link {
+            display: inline-block;
+            border-radius: 10px;
+            height: 100%;
+            width: 100%;
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+
+            >img {
+                position: relative;
+                z-index: -1;        
+                border-radius: 10px;
                 width: 100%;
-                content: "";
-                z-index: 1;
-                border-radius: 25px;
-                background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+                height: 100%;
+                object-fit: cover;
             }
 
         }
+
+
+
+        
+
+        
         >h2 {
             padding: 0;
             margin: 20px;
@@ -48,10 +55,9 @@ section {
             text-align: left;
             left: 0%;
             bottom: 0%;
-            // transform: translate(-50%, -50%);
             color: white;
             font-weight: 400;
-            font-size: 16px;
+            font-size: 18px;
         }
     }
 }
