--- a/src/assets/sass/layouts/navs.scss
+++ b/src/assets/sass/layouts/navs.scss
@@ -5,10 +5,12 @@ nav {
     justify-content: center;
     align-items: center;
     position: relative;
+    margin: 20px 80px;
+
     img {
         width: 100%;
         height: 200px;
-        margin: 20px 80px;
+        width: 100%;
         z-index: 0;
         object-fit: cover;
         border-radius: 25px;
