--- a/src/assets/sass/layouts/navs.scss
+++ b/src/assets/sass/layouts/navs.scss
@@ -5,7 +5,7 @@ nav {
     justify-content: center;
     align-items: center;
     position: relative;
-    margin: 20px 80px;
+    margin: 50px 80px;
 
     img {
         width: 100%;
@@ -23,7 +23,8 @@ nav {
         transform: translate(-50%, -50%);
         color: white;
         font-weight: 500;
-        font-size: 36px;
-
+        font-size: 48px;
+        width: 100%;
+        text-align: center;
     }
 }
