--- a/src/assets/sass/layouts/footers.scss
+++ b/src/assets/sass/layouts/footers.scss
@@ -1,1 +1,18 @@
 /**/
+footer {
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 60px;
+    >img {
+        width: 100px;
+        margin-bottom: 40px;
+    }
+    >h3 {
+        font-weight: 500;
+        font-size: 24px;
+        text-align: center;
+    }
+}
