connected json data to product page

--- a/src/assets/sass/layouts/headers.scss
+++ b/src/assets/sass/layouts/headers.scss
@@ -5,7 +5,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin: 30px 80px;
+  margin: 30px 80px 50px 80px;
 
   .logo {
     width: 200px;
