--- a/src/assets/sass/components/cards.scss
+++ b/src/assets/sass/components/cards.scss
@@ -1,1 +1,35 @@
 /**/
+article {
+    margin: 30px;
+    background-color: #F7F7F7;
+    >div {
+        color: white;
+        background-color: #FF6060;
+        border-radius: 10px;
+        padding: 10px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        >img {
+            height: 32px;
+            width: 32px;
+            &.closed {
+                transform: rotateX(180deg);
+            }
+        }
+        &:hover {
+            filter: opacity(0.8);
+            transition: filter .03s ease-in;
+            cursor: pointer;
+
+        }
+    }
+    >ul {
+        border-radius: 10px;
+        padding: 10px 20px 20px 20px;
+        color: #FF6060;
+        
+
+    }
+}
