--- a/src/assets/sass/components/cards.scss
+++ b/src/assets/sass/components/cards.scss
@@ -2,7 +2,8 @@
 article {
     margin: 30px;
     background-color: #F7F7F7;
-    >div {
+    border-radius: 10px;
+    >div.topbar {
         color: white;
         background-color: #FF6060;
         border-radius: 10px;
@@ -25,7 +26,7 @@ article {
 
         }
     }
-    >ul {
+    >div.content {
         border-radius: 10px;
         padding: 10px 20px 20px 20px;
         color: #FF6060;
