--- a/src/assets/sass/components/cards.scss
+++ b/src/assets/sass/components/cards.scss
@@ -1,18 +1,18 @@
 /**/
 article {
     margin: 30px;
-    background-color: #F7F7F7;
+    background-color: #f7f7f7;
     border-radius: 10px;
-    >div.topbar {
+    > div.topbar {
         color: white;
-        background-color: #FF6060;
+        background-color: #ff6060;
         border-radius: 10px;
         padding: 10px 20px;
         display: flex;
         justify-content: space-between;
         align-items: center;
 
-        >img {
+        > img {
             height: 32px;
             width: 32px;
             &.closed {
@@ -21,16 +21,64 @@ article {
         }
         &:hover {
             filter: opacity(0.8);
-            transition: filter .03s ease-in;
+            transition: filter 0.03s ease-in;
             cursor: pointer;
-
         }
     }
-    >div.content {
+    > div.content {
         border-radius: 10px;
         padding: 10px 20px 20px 20px;
-        color: #FF6060;
-        
+        color: #ff6060;
+    }
+}
 
+.carousel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 30px;
+    border-radius: 25px;
+
+    img.carouselImage {
+        width: 100%;
+        aspect-ratio: 3 / 1;
+        height: auto;
+        display: block;
+        border-radius: 25px;
+    }
+
+    img.arrowButton {
+        position: absolute;
+        top: 50%;
+        padding: 10px 10px;
+        height: 120px;
+        width: auto;
+        aspect-ratio: 1 / 1;
+        color: white;
+        border: none;
+        opacity: 0.8;
+    }
+
+    .previousButton {
+        left: 0px;
+        transform: translateY(-50%) rotate(-90deg);
+        &:hover {
+            cursor: pointer;
+            transform: translateY(-50%) rotate(-90deg) scale(1.2);
+            opacity: 1;
+            transition: all 0.2s;
+        }
+    }
+
+    .nextButton {
+        right: 0px;
+        transform: translateY(-50%) rotate(90deg);
+        &:hover {
+            cursor: pointer;
+            transform: translateY(-50%) rotate(90deg) scale(1.2);
+            opacity: 1;
+            transition: all 0.2s;
+        }
     }
 }
