--- a/src/assets/sass/components/buttons.scss
+++ b/src/assets/sass/components/buttons.scss
@@ -1,1 +1,14 @@
 /**/
+.starIcon {
+    height: 20px;
+    width: auto;
+    aspect-ratio: 1 / 1;
+}
+
+.redStarIcon {
+    color: red;
+}
+
+.greyStarIcon {
+    color: grey;
+}
