--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,31 +1,31 @@
+@import 'utils/variables';
+@import 'utils/functions';
+@import 'utils/mixins';
+@import 'utils/extensions';
 
-@import "utils/variables";
-@import "utils/functions";
-@import "utils/mixins";
-@import "utils/extensions";
+@import 'themes/template';
+@import 'themes/animations';
 
-@import "themes/template";
-@import "themes/animations";
-
-@import "base/normalize";
-@import "base/base";
-@import "base/typography";
+@import 'base/normalize';
+@import 'base/base';
+@import 'base/typography';
 // @import "./vendors/";
 
-@import "components/loaders";
-@import "components/buttons";
-@import "components/cards";
-@import "components/forms";
-@import "components/jumbotrons";
-@import "components/lists";
-@import "components/navbars";
-@import "components/footers";
+@import 'components/loaders';
+@import 'components/buttons';
+@import 'components/cards';
+@import 'components/forms';
+@import 'components/jumbotrons';
+@import 'components/lists';
+@import 'components/navbars';
+@import 'components/footers';
 
-@import "layouts/headers";
-@import "layouts/navs";
-@import "layouts/mains";
-@import "layouts/footers";
+@import 'layouts/headers';
+@import 'layouts/navs';
+@import 'layouts/mains';
+@import 'layouts/footers';
 
-@import "pages/all";
-@import "pages/home";
-@import "pages/menus";
+@import 'pages/all';
+@import 'pages/home';
+@import 'pages/menus';
+@import 'pages/location';
