--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -1,7 +1,7 @@
 /**/
 
-section {
-    background-color: #F7F7F7;
+section.cards-list {
+    background-color: #f7f7f7;
     border-radius: 25px;
     margin: 20px 80px;
     padding: 20px;
@@ -10,48 +10,44 @@ section {
     align-items: center;
     flex-flow: row wrap;
 
-    >div {
-
+    > div.card {
         z-index: 1;
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
         width: calc(33.3% - 4%);
-        aspect-ratio : 1 / 1;
+        aspect-ratio: 1 / 1;
         padding: 0;
         border-radius: 10px;
         margin: 2%;
 
-
-        >.link {
+        > .card__link {
             display: inline-block;
             border-radius: 10px;
             height: 100%;
             width: 100%;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+            background: linear-gradient(
+                180deg,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(0, 0, 0, 0.5) 100%
+            );
 
-            >img {
+            > img.card__image {
                 position: relative;
-                z-index: -1;        
+                z-index: -1;
                 border-radius: 10px;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
             }
-
         }
 
-
-
-        
-
-        
-        >h2 {
+        > h2.card__title {
             padding: 0;
             margin: 20px;
             z-index: 1;
-            position: absolute;  
+            position: absolute;
             text-align: left;
             left: 0%;
             bottom: 0%;
