--- a/src/assets/sass/layouts/navs.scss
+++ b/src/assets/sass/layouts/navs.scss
@@ -1,13 +1,13 @@
 /**/
 
-nav {
+nav.banner {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     margin: 30px 80px;
 
-    img {
+    img.banner__image {
         width: 100%;
         height: 200px;
         width: 100%;
@@ -15,9 +15,9 @@ nav {
         object-fit: cover;
         border-radius: 25px;
     }
-    h1 {
+    h1.banner_title {
         z-index: 1;
-        position: absolute;  
+        position: absolute;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
