--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -57,3 +57,13 @@ section.cards-list {
         }
     }
 }
+
+div.dropdowns-list {
+    display: flex;
+    justify-content: stretch;
+    align-items: flex-start;
+    width: 100%;
+    > .dropdown {
+        width: 100%;
+    }
+}
