--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -24,14 +24,28 @@ section.cards-list {
 
         > .card__link {
             display: inline-block;
+            position: relative;
             border-radius: 10px;
             height: 100%;
             width: 100%;
-            background: linear-gradient(
-                180deg,
-                rgba(255, 255, 255, 0) 0%,
-                rgba(0, 0, 0, 0.5) 100%
-            );
+            &::after {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                border-radius: 10px;
+                height: 100%;
+                width: 100%;
+                background: linear-gradient(
+                    180deg,
+                    rgba(255, 255, 255, 0) 0%,
+                    rgba(0, 0, 0, 0.5) 100%
+                );
+            }
+            &:hover::after {
+                opacity: 0.4;
+                transition: all 0.2s ease;
+            }
 
             > img.card__image {
                 position: relative;
@@ -54,6 +68,11 @@ section.cards-list {
             color: white;
             font-weight: 400;
             font-size: 18px;
+        }
+        &:hover {
+            transform: scale(1.05);
+            transition: all 0.2s ease;
+            filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.186));
         }
     }
 }
