completed 404 page and created an about page

--- a/src/assets/sass/layouts/headers.scss
+++ b/src/assets/sass/layouts/headers.scss
@@ -6,6 +6,7 @@ header.header {
     align-items: center;
     justify-content: space-between;
     margin: 30px 80px 40px 80px;
+    height: 10vh;
 
     .header__logo {
         width: 150px;
