--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -28,4 +28,6 @@
 @import 'pages/all';
 @import 'pages/home';
 @import 'pages/menus';
-@import 'pages/location';
+@import 'pages/post';
+@import 'pages/about';
+@import 'pages/pageNotFound';
