--- a/src/assets/sass/components/cards.scss
+++ b/src/assets/sass/components/cards.scss
@@ -1,6 +1,6 @@
 /**/
 article.dropdown {
-    margin: 30px;
+    margin: 30px 80px;
     background-color: #f7f7f7;
     border-radius: 10px;
     position: relative;
@@ -57,7 +57,7 @@ article.dropdown {
     align-items: center;
     justify-content: center;
     position: relative;
-    margin: 30px;
+    margin: 30px 80px;
     border-radius: 25px;
 
     img.carousel__image {
