--- a/src/assets/sass/layouts/navs.scss
+++ b/src/assets/sass/layouts/navs.scss
@@ -16,7 +16,7 @@ nav.banner {
         border-radius: 25px;
     }
     h1.banner_title {
-        z-index: 1;
+        z-index: 2;
         position: absolute;
         left: 50%;
         top: 50%;
@@ -26,5 +26,19 @@ nav.banner {
         font-size: 36px;
         width: 100%;
         text-align: center;
+    }
+    &::after {
+        content: '';
+        display: block;
+        z-index: 1;
+        background-color: #000000;
+        mix-blend-mode: darken;
+        opacity: 0.3;
+        border-radius: 25px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
     }
 }
