--- a/src/assets/sass/components/cards.scss
+++ b/src/assets/sass/components/cards.scss
@@ -1,8 +1,8 @@
 /**/
 article.dropdown {
-    margin: 30px 80px;
-    background-color: #f7f7f7;
-    border-radius: 10px;
+    margin: $component-margin1;
+    background-color: $grey1;
+    border-radius: $border-radius1;
     position: relative;
     > div.dropdown__topbar {
         position: relative;
@@ -13,8 +13,8 @@ article.dropdown {
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #ff6060;
-            border-radius: 10px;
+            background-color: $red1;
+            border-radius: $border-radius1;
         }
         div.dropdown__informations {
             color: white;
@@ -22,7 +22,7 @@ article.dropdown {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-radius: 10px;
+            border-radius: $border-radius1;
             > * {
                 z-index: 2;
             }
@@ -46,9 +46,9 @@ article.dropdown {
     > div.dropdown__content {
         position: relative;
         z-index: 100;
-        border-radius: 10px;
+        border-radius: $border-radius1;
         padding: 10px 20px 20px 20px;
-        color: #ff6060;
+        color: $red1;
     }
 }
 
@@ -57,15 +57,15 @@ article.dropdown {
     align-items: center;
     justify-content: center;
     position: relative;
-    margin: 30px 80px;
-    border-radius: 25px;
+    margin: $component-margin1;
+    border-radius: $border-radius2;
 
     img.carousel__image {
         width: 100%;
         aspect-ratio: 3.5 / 1;
         height: auto;
         display: block;
-        border-radius: 25px;
+        border-radius: $border-radius2;
     }
 
     img.carousel__button {
@@ -119,13 +119,13 @@ div.card {
     width: calc(33.3% - 4%);
     aspect-ratio: 1 / 1;
     padding: 0;
-    border-radius: 10px;
+    border-radius: $border-radius1;
     margin: 2%;
 
     > .card__link {
         display: inline-block;
         position: relative;
-        border-radius: 10px;
+        border-radius: $border-radius1;
         height: 100%;
         width: 100%;
         &::after {
@@ -133,7 +133,7 @@ div.card {
             position: absolute;
             left: 0;
             top: 0;
-            border-radius: 10px;
+            border-radius: $border-radius1;
             height: 100%;
             width: 100%;
             background: linear-gradient(
@@ -150,7 +150,7 @@ div.card {
         > img.card__image {
             position: relative;
             z-index: -1;
-            border-radius: 10px;
+            border-radius: $border-radius1;
             width: 100%;
             height: 100%;
             object-fit: cover;
