--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -1,80 +1,14 @@
 /**/
 
 section.cards-list {
-    background-color: #f7f7f7;
-    border-radius: 25px;
+    background-color: $grey1;
+    border-radius: $border-radius2;
     margin: 20px 80px;
     padding: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
-
-    > div.card {
-        z-index: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        width: calc(33.3% - 4%);
-        aspect-ratio: 1 / 1;
-        padding: 0;
-        border-radius: 10px;
-        margin: 2%;
-
-        > .card__link {
-            display: inline-block;
-            position: relative;
-            border-radius: 10px;
-            height: 100%;
-            width: 100%;
-            &::after {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 0;
-                border-radius: 10px;
-                height: 100%;
-                width: 100%;
-                background: linear-gradient(
-                    180deg,
-                    rgba(255, 255, 255, 0) 0%,
-                    rgba(0, 0, 0, 0.5) 100%
-                );
-            }
-            &:hover::after {
-                opacity: 0.4;
-                transition: all 0.2s ease;
-            }
-
-            > img.card__image {
-                position: relative;
-                z-index: -1;
-                border-radius: 10px;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-        }
-
-        > h2.card__title {
-            padding: 0;
-            margin: 20px;
-            z-index: 1;
-            position: absolute;
-            text-align: left;
-            left: 0%;
-            bottom: 0%;
-            color: white;
-            font-weight: 400;
-            font-size: 18px;
-        }
-        &:hover {
-            transform: scale(1.05);
-            transition: all 0.2s ease;
-            filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.186));
-        }
-    }
 }
 
 div.dropdowns-list {
