--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -3,12 +3,21 @@
 section.cards-list {
     background-color: $grey1;
     border-radius: $border-radius2;
-    margin: 20px 80px;
     padding: 20px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
+    @include from-desktop {
+        margin: $component-margin2;
+    }
+
+    @include mobile-and-tablette {
+        margin: $component-margin-mobile1;
+        justify-content: flex-start;
+        background: none;
+        padding: 0;
+    }
 }
 
 div.dropdowns-list {
@@ -16,7 +25,9 @@ div.dropdowns-list {
     justify-content: stretch;
     align-items: flex-start;
     width: 100%;
-    > .dropdown {
-        width: 100%;
+    @include mobile-and-tablette {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
     }
 }
