--- a/src/assets/sass/utils/variables.scss
+++ b/src/assets/sass/utils/variables.scss
@@ -35,6 +35,8 @@ $red1: #ff6060;
 $grey1: #f7f7f7;
 
 $component-margin1: 30px 80px;
+$component-margin2: 20px 80px;
+$component-margin-mobile1: 20px;
 
 $border-radius1: 10px;
 $border-radius2: 25px;
