--- a/src/assets/sass/layouts/navs.scss
+++ b/src/assets/sass/layouts/navs.scss
@@ -6,7 +6,6 @@ nav.banner {
     align-items: center;
     position: relative;
     margin: $component-margin1;
-
     img.banner__image {
         width: 100%;
         height: 200px;
@@ -15,7 +14,7 @@ nav.banner {
         object-fit: cover;
         border-radius: $border-radius2;
     }
-    h1.banner_title {
+    h1.banner__title {
         z-index: 2;
         position: absolute;
         left: 50%;
@@ -40,5 +39,22 @@ nav.banner {
         left: 0;
         height: 100%;
         width: 100%;
+    }
+
+    @include mobile-and-tablette {
+        margin: $component-margin-mobile1;
+        border-radius: $border-radius1;
+        h1.banner__title {
+            text-align: left;
+            width: calc(100% - 32px);
+            font-size: 28px;
+        }
+        img.banner__image {
+            height: 150px;
+            border-radius: $border-radius1;
+        }
+        &::after {
+            border-radius: $border-radius1;
+        }
     }
 }
