commented JS code

--- a/src/assets/sass/components/lists.scss
+++ b/src/assets/sass/components/lists.scss
@@ -25,9 +25,12 @@ div.dropdowns-list {
     justify-content: stretch;
     align-items: flex-start;
     width: 100%;
-    > .dropdown {
-        width: 100%;
+    @include from-desktop {
+        > .dropdown {
+            width: 100%;
+        }
     }
+
     @include mobile-and-tablette {
         flex-direction: column;
         justify-content: flex-start;
